# socialfeya

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
src/: routers.py
src/base/: classes.py  permissions.py  serializers.py
src/comments/: models.py
src/feed/: services.py  views.py
src/feed/management/commands/: addfake.py
src/followers/: models.py  urls.py  views.py
src/followers/migrations/: 0001_initial.py
src/profiles/: models.py  serializers.py  urls.py  views.py
src/profiles/migrations/: 0001_initial.py  0002_auto_20201106_1827.py  0003_auto_20201112_1913.py
src/wall/: admin.py  models.py  serializers.py  urls.py  views.py
src/wall/migrations/: 0001_initial.py
